[package]
name = "multiformats"
description = "Implementation of the Multiformats for libp2p"
repository = "https://github.com/prataprc/multiformats"
keywords = ["multiformats", "libp2p"]
version = "0.0.1"
authors = ["prataprc <prataprc@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/multiformats/"
edition = "2018"

[dependencies]
unsigned-varint = "*"
multibase = "*"
lazy_static = "1.4.0"
digest = { version = "0.9", default-features = false }
sha-1 = { version = "0.9", default-features = false }
sha2 = { version = "0.9", default-features = false }
sha3 = { version = "0.9", features = ["std"] }
blake2b_simd = { version = "0.5.9", default-features = false }
blake2s_simd = { version = "0.5.9", default-features = false }
# TODO: should blake3 be optional ?
blake3 = { version = "0.3.6", default-features = false }
murmur3 = "0.5.1"

[dev-dependencies]
reqwest = { version = "0.10.8", features = ["blocking"] }
parse_int = "0.4.0"
