[package]
name = "multiformats"
description = "Implementation of the Multiformats for libp2p"
repository = "https://github.com/prataprc/multiformats"
keywords = ["multiformats", "libp2p"]
version = "0.0.1"
authors = ["prataprc <prataprc@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/multiformats/"
edition = "2018"

[dependencies]
prost = "0.6.1"
unsigned-varint = "0.5.1"
multibase = "0.8.0"
lazy_static = "1.4.0"
digest = { version = "0.9", default-features = false }
sha-1 = { version = "0.9", default-features = false }
sha2 = { version = "0.9", default-features = false }
sha3 = { version = "0.9", features = ["std"] }
blake2b_simd = { version = "0.5.9", default-features = false }
blake2s_simd = { version = "0.5.9", default-features = false }
blake3 = { version = "0.3.6", default-features = false }
md4 = "0.9.0"
md5 = "0.7.0"
skein-hash = "0.3.0"
ripemd160 = "0.9.1"
ripemd320 = "0.9.0"
k12 = "0.1.0"
zeroize = "1"
rand = "0.7.3"
ed25519-dalek = "1.0.0-pre.4"
libsecp256k1 = { version = "0.3.5", optional = true }
bs58 = "0.3.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ring = { version = "0.16.9", features = ["alloc", "std"], default-features = false }
asn1_der = "0.6.1"

[dev-dependencies]
reqwest = { version = "0.10.8", features = ["blocking"] }
parse_int = "0.4.0"
quickcheck = "0.9.2"

[build-dependencies]
prost-build = "0.6.1"

[features]
default = ["secp256k1"]
secp256k1 = ["libsecp256k1"]
